apps/homepage/install/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: homepage
  labels:
    app: homepage
    app.kubernetes.io/name: homepage
    app.kubernetes.io/part-of: homepage
    app.kubernetes.io/instance: homepage
    app.kubernetes.io/component: homepage
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: homepage
  template:
    metadata:
      labels:
        app: homepage
        app.kubernetes.io/name: homepage
        app.kubernetes.io/part-of: homepage
        app.kubernetes.io/instance: homepage
        app.kubernetes.io/component: homepage
    spec:
      serviceAccountName: homepage
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:v1.13.0
          imagePullPolicy: IfNotPresent
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false # prevent sudo, etc.
            privileged: false               # prevent acting like host root
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 256Mi
          ports:
            - containerPort: 3000
              protocol: TCP
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 20
            failureThreshold: 5
            successThreshold: 1
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 20
            failureThreshold: 5
            successThreshold: 1
            timeoutSeconds: 10
          volumeMounts:
            - mountPath: /app/config
              name: config
            - mountPath: /app/config/bookmarks.yaml
              name: homepage-config
              subPath: bookmarks.yaml
            - mountPath: /app/config/kubernetes.yaml
              name: homepage-config
              subPath: kubernetes.yaml
            - mountPath: /app/config/settings.yaml
              name: homepage-config
              subPath: settings.yaml
            - mountPath: /app/config/widgets.yaml
              name: homepage-config
              subPath: widgets.yaml
            - mountPath: /app/public/images/custom_background.jpg
              name: homepage-images
              subPath: custom_background.jpg
            - mountPath: /app/public/images/telekom.png
              name: homepage-images
              subPath: telekom.png
            - mountPath: /app/config/services.yaml
              name: homepage-secret
              subPath: services.yaml
            - mountPath: /app/config/logs
              name: logs
      volumes:
        - name: config
          emptyDir: {}
        - name: homepage-config
          configMap:
            name: homepage-config
        - name: homepage-images
          configMap:
            name: homepage-images
        - name: homepage-secret
          secret:
            secretName: homepage-secret
        - name: logs
          emptyDir: {}
      restartPolicy: Always
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        fsGroup: 1000            # hardcode group to non-root if not set in Dockerfile
        runAsUser: 1000          # hardcode user to non-root if not set in Dockerfile
        runAsGroup: 1000         # hardcode group to non-root if not set in Dockerfile
        runAsNonRoot: true       # hardcode to non-root. Redundant to above if Dockerfile is set USER 1000
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - homepage
              topologyKey: kubernetes.io/hostname
