apps/homepage/install/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage
  labels:
    app: homepage
    app.kubernetes.io/name: homepage
    app.kubernetes.io/part-of: homepage
    app.kubernetes.io/instance: homepage
    app.kubernetes.io/component: homepage
spec:
  selector:
    app: homepage
  ipFamilyPolicy: RequireDualStack
  ipFamilies:
    - IPv6
    - IPv4
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: http
  type: ClusterIP
