apps/homepage/install/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: homepage
spec:
  ingressClassName: traefik-external
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      middlewares:
        - name: authentik
          namespace: traefik
        - name: default-headers
          namespace: traefik
      match: Host(`homepage.local.asztalos.net`)
      priority: 10
      services:
        - name: homepage
          namespace: homepage
          port: 3000
  tls:
    secretName: local-asztalos-net-tls
